added a reset feature

--- a/timer/index.html
+++ b/timer/index.html
@@ -15,6 +15,7 @@
   </div>
   <button id="start">Start</button>
   <button id="stop">Stop</button>
+  <button id="reset">Reset</button>
 </body>
 
 </html>
