--- a/timer/index.html
+++ b/timer/index.html
@@ -14,6 +14,8 @@
     <p id="second">00</p>
   </div>
   <button id="start">Start</button>
+  <button id="addMinute">More Time</button>
+  <button id="takeMinute">Less Time</button>
   <button id="stop">Stop</button>
   <button id="reset">Reset</button>
 </body>
