created a function to see if people are streaming -will set the logic for true

--- a/twitchAPI/index.html
+++ b/twitchAPI/index.html
@@ -9,7 +9,10 @@
 </head>
 <body>
 <p class="info">
-  twitch json data will populate here
+  some twitch json data will populate here
+</p>
+<p class="isStreaming">
+  See if they're online
 </p>
 </body>
 </html>
