notice a bug with the link test

--- a/twitchAPI/index.html
+++ b/twitchAPI/index.html
@@ -11,8 +11,8 @@
 <p class="info">
   some twitch json data will populate here
 </p>
-<p class="isStreaming">
+<div class="isStreaming">
   See if they're online
-</p>
+</div>
 </body>
 </html>
