Now shows if the user is online or offline

--- a/twitchAPI/index.html
+++ b/twitchAPI/index.html
@@ -12,7 +12,11 @@
   some twitch json data will populate here
 </p>
 <div class="isStreaming">
-  See if they're online
+  Online People.
+</div>
+<br>
+<div class="isNotStreaming">
+  Offline People
 </div>
 </body>
 </html>
