removed a lot of code -focusing on one user right now -will revisit to check against multiple users later

--- a/twitchAPI/index.html
+++ b/twitchAPI/index.html
@@ -8,15 +8,9 @@
   <title></title>
 </head>
 <body>
-<p class="info">
-  some twitch json data will populate here
-</p>
-<div class="isStreaming">
-  Online People.
-</div>
-<br>
-<div class="isNotStreaming">
-  Offline People
-</div>
+  <div class="isStreaming">
+    Check out the stream;
+  </div>
+
 </body>
 </html>
