--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="main.js" type="text/javascript"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <title>Bloop</title>
 </head>
 <body>
-  <div id="ajax"></div>
+  <div id="ajax">okay liutenant dan</div>
 </body>
 </html>
