set up basic AJAX -need to create node server next

--- a/AJAX/index.html
+++ b/AJAX/index.html
@@ -6,6 +6,7 @@
   <title>Bloop</title>
 </head>
 <body>
-  <div id="ajax">okay liutenant dan</div>
+  <div id="ajax">Hmm?</div>
+  <button id="load" onclick="sendAJAX()">Need anything?</button>
 </body>
 </html>
