--- a/nodePlay/bareBones/hello-world/express/post-index.html
+++ b/nodePlay/bareBones/hello-world/express/post-index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Hello World!</title>
+  <title>Post world!</title>
 </head>
 <body>
-  <form action="http://127.0.0.1:3000/process_get" method="GET">
-  First Name: <input type="text" name="first_name">  <br>
-
+  <form action="http://127.0.0.1:3000/process_post" method="POST">
+  First Name: <input type="text" name="first_name">  
+  <br>
   Last Name: <input type="text" name="last_name">
   <input type="submit" value="Submit">
   </form>
