--- a/angular/hitRunning/index.html
+++ b/angular/hitRunning/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="myApp">
 <head>
   <title>Fast start with angular</title>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
+  <script src="controllers/test.js"></script>
 </head>
 <body>
-
+  <div ng-controller="testController">
+    <h1>Scope</h1>
+    <p>$scope has access to any of the elements inside the div tag referenced by the ng-controller attribute/directive </p>
+    <p>Directives add much to the functionality of the page. You can create your own html tags if you want!</p>
+  </div>
 </body>
 </html>
