--- a/angular/hitRunning/index.html
+++ b/angular/hitRunning/index.html
@@ -8,8 +8,12 @@
 <body>
   <div ng-controller="testController">
     <h1>Scope</h1>
+
     <p>$scope has access to any of the elements inside the div tag referenced by the ng-controller attribute/directive </p>
+
     <p>Directives add much to the functionality of the page. You can create your own html tags if you want!</p>
+
+    <p>The price of a clark potato is now: {{ price | currency }}</p>
   </div>
 </body>
 </html>
