Working with filters

--- a/angular/hitRunning/index.html
+++ b/angular/hitRunning/index.html
@@ -7,10 +7,7 @@
 </head>
 <body>    
   <div ng-controller="controller1">
-    <p>{{ bacon }}</p>
-    <div ng-controller="controller2">
-      <p>{{ bacon }} {{ ham }}</p>
-    </div>
+    <p>{{ price | currency }}</p>
   </div>
 </body>
 </html>
