--- a/angular/hitRunning/index.html
+++ b/angular/hitRunning/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>    
   <div ng-controller="controller1">
-    <p>{{ price | currency }}</p>
+    <p>{{ 'price' | uppercase }}</p>
   </div>
 </body>
 </html>
