--- a/angular/hitRunning/index.html
+++ b/angular/hitRunning/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>    
   <div ng-controller="controller1">
-    <p>{{ 'price' | uppercase }}</p>
+  <ol ng-repeat="friend in friends">
+    <li>
+      {{ friend.name }}: {{ friend.phone }}
+    </li>
+  </ol>
   </div>
 </body>
 </html>
