--- a/angular/hitRunning/index.html
+++ b/angular/hitRunning/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>    
   <div ng-controller="controller1">
-    <input ng-model="searchText">
+    <input ng-model="searchText" ng-change="hi()">
     <div ng-repeat="friend in friends | filter:searchText">
       <li>
         {{ friend.name }}: {{ friend.phone }}
