set up random word rearrangement filter

--- a/angular/hitRunning/index.html
+++ b/angular/hitRunning/index.html
@@ -4,6 +4,8 @@
   <title>Fast start with angular</title>
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
   <script src="js/controllers/months.js"></script>
+  <script src="js/filters/random-word.js"></script>
+
 </head>
 <body>    
   <div ng-controller="controller1">
